--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,39 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    package="com.example.androidlabs"
     android:theme="@style/Theme.AppCompat"
-    package="com.example.androidlabs">
-<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    tools:ignore="ImpliedTouchscreenHardware,MissingLeanbackSupport">
+    
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-feature android:name="android.hardware.touchscreen" android:required="false" />
-    <uses-feature android:name="android.software.leanback" android:required="true"/>
-
     <application
-        android:banner="@drawable/avatar"
         android:allowBackup="true"
-
+        android:dataExtractionRules="@xml/data_extraction_rules"
+        android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
+        android:label="CST2335 Lab_7"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AndroidLabs"
-
-        tools:targetApi="31"
-        tools:ignore="MissingTvBanner">
+        tools:ignore="MissingTvBanner"
+        tools:targetApi="31" >
+        <activity  android:name=".DetailsStarWars"
+                   android:exported="false"/>
 
         <activity
-            android:name=".MainActivity"
-            android:screenOrientation="landscape"
-            android:label="@string/app_name"
-            android:theme="@style/Theme.AndroidLabs"
             android:exported="true"
-            tools:ignore="DuplicateActivity">
+            android:name=".MainActivity">
+        <intent-filter>
+            <action android:name="android.intent.action.MAIN" />
 
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LEANBACK_LAUNCHER" />
-            </intent-filter>
-
-        </activity>
+            <category android:name="android.intent.category.LEANBACK_LAUNCHER" />
+            <category android:name="android.intent.category.LAUNCHER" />
+        </intent-filter>
+    </activity>
     </application>
-
 </manifest>
